--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta description="At Ark Resume, we provide quality resume, CV, Cover Letter, LinkedIn Profile, Biography and Elevator Pitch writing services that help you get interviews." />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ark Resume - Quality Resume Writing Services</title>
+    <title>Ark Resume - Get 3x Interview Calls with Our Modern Resumes.</title>
   </head>
   <body>
     <div id="root"></div>
